python/tests/gold/globalcorstest/snapshots/econf.json
{
  "layered_runtime": {
    "layers": [
      {
        "name": "static_layer",
        "static_layer": {
          "re2.max_program_size.error_level": 200,
          "envoy.reloadable_features.no_extension_lookup_by_name": false
        }
      }
    ]
  },
  "static_resources": {
    "clusters": [
      {
        "alt_stat_name": "127_0_0_1_8877",
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_127_0_0_1_8877_default",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "127.0.0.1",
                        "port_value": 8877,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_127_0_0_1_8877_default",
        "type": "STRICT_DNS"
      },
      {
        "alt_stat_name": "globalcorstest_http",
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_globalcorstest_http_default",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "globalcorstest-http",
                        "port_value": 80,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_globalcorstest_http_default",
        "type": "STRICT_DNS"
      }
    ],
    "listeners": [
      {
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 8080,
            "protocol": "TCP"
          }
        },
        "filter_chains": [
          {
            "filter_chain_match": {
              "transport_protocol": "tls"
            },
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "log_format": {
                          "text_format_source": {
                            "inline_string": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n"
                          }
                        },
                        "path": "/dev/fd/1"
                      }
                    }
                  ],
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.cors"
                    },
                    {
                      "name": "envoy.filters.http.router"
                    }
                  ],
                  "http_protocol_options": {
                    "accept_http_10": false
                  },
                  "normalize_path": true,
                  "preserve_external_request_id": false,
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "name": "listener-8080-globalcorstest-*",
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.65f77b4cfda77405d7353cc1c83de745ee74b141"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.65f77b4cfda77405d7353cc1c83de745ee74b141"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.a2c3d327956b3acbfedb3662b5f50528dae653b5"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.a2c3d327956b3acbfedb3662b5f50528dae653b5"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.13426d65f10f16f25ed1da231fd9808e6920ba6b"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.13426d65f10f16f25ed1da231fd9808e6920ba6b"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/foo/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_globalcorstest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_globalcorstest_http_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.cfc9f77abfba141327b2282e7923308040d9ae76"
                                }
                              },
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/foo/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_globalcorstest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_globalcorstest_http_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.cfc9f77abfba141327b2282e7923308040d9ae76"
                                }
                              },
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/bar/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_globalcorstest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_globalcorstest_http_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://bar.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.32e90a5272992e914977925262f56c35deaee611"
                                }
                              },
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/bar/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_globalcorstest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_globalcorstest_http_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://bar.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.32e90a5272992e914977925262f56c35deaee611"
                                }
                              },
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "server_name": "envoy",
                  "stat_prefix": "ingress_https",
                  "use_remote_address": true
                }
              }
            ]
          },
          {
            "filter_chain_match": {},
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "log_format": {
                          "text_format_source": {
                            "inline_string": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n"
                          }
                        },
                        "path": "/dev/fd/1"
                      }
                    }
                  ],
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.cors"
                    },
                    {
                      "name": "envoy.filters.http.router"
                    }
                  ],
                  "http_protocol_options": {
                    "accept_http_10": false
                  },
                  "normalize_path": true,
                  "preserve_external_request_id": false,
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "name": "listener-8080-globalcorstest-*",
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.65f77b4cfda77405d7353cc1c83de745ee74b141"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.65f77b4cfda77405d7353cc1c83de745ee74b141"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.a2c3d327956b3acbfedb3662b5f50528dae653b5"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.a2c3d327956b3acbfedb3662b5f50528dae653b5"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.13426d65f10f16f25ed1da231fd9808e6920ba6b"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.13426d65f10f16f25ed1da231fd9808e6920ba6b"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/foo/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_globalcorstest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_globalcorstest_http_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.cfc9f77abfba141327b2282e7923308040d9ae76"
                                }
                              },
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/foo/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_globalcorstest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_globalcorstest_http_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.cfc9f77abfba141327b2282e7923308040d9ae76"
                                }
                              },
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/bar/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_globalcorstest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_globalcorstest_http_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://bar.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.32e90a5272992e914977925262f56c35deaee611"
                                }
                              },
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/bar/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_globalcorstest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_globalcorstest_http_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://bar.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.32e90a5272992e914977925262f56c35deaee611"
                                }
                              },
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "server_name": "envoy",
                  "stat_prefix": "ingress_https",
                  "use_remote_address": true
                }
              }
            ]
          }
        ],
        "listener_filters": [
          {
            "name": "envoy.filters.listener.tls_inspector"
          }
        ],
        "name": "listener-8080-globalcorstest",
        "traffic_direction": "UNSPECIFIED"
      },
      {
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 8443,
            "protocol": "TCP"
          }
        },
        "filter_chains": [
          {
            "filter_chain_match": {
              "transport_protocol": "tls"
            },
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "log_format": {
                          "text_format_source": {
                            "inline_string": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n"
                          }
                        },
                        "path": "/dev/fd/1"
                      }
                    }
                  ],
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.cors"
                    },
                    {
                      "name": "envoy.filters.http.router"
                    }
                  ],
                  "http_protocol_options": {
                    "accept_http_10": false
                  },
                  "normalize_path": true,
                  "preserve_external_request_id": false,
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "name": "listener-8443-globalcorstest-*",
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.65f77b4cfda77405d7353cc1c83de745ee74b141"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.65f77b4cfda77405d7353cc1c83de745ee74b141"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.a2c3d327956b3acbfedb3662b5f50528dae653b5"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.a2c3d327956b3acbfedb3662b5f50528dae653b5"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.13426d65f10f16f25ed1da231fd9808e6920ba6b"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.13426d65f10f16f25ed1da231fd9808e6920ba6b"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/foo/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_globalcorstest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_globalcorstest_http_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.cfc9f77abfba141327b2282e7923308040d9ae76"
                                }
                              },
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/foo/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_globalcorstest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_globalcorstest_http_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.cfc9f77abfba141327b2282e7923308040d9ae76"
                                }
                              },
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/bar/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_globalcorstest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_globalcorstest_http_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://bar.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.32e90a5272992e914977925262f56c35deaee611"
                                }
                              },
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/bar/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_globalcorstest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_globalcorstest_http_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://bar.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.32e90a5272992e914977925262f56c35deaee611"
                                }
                              },
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "server_name": "envoy",
                  "stat_prefix": "ingress_https",
                  "use_remote_address": true
                }
              }
            ]
          },
          {
            "filter_chain_match": {},
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "log_format": {
                          "text_format_source": {
                            "inline_string": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n"
                          }
                        },
                        "path": "/dev/fd/1"
                      }
                    }
                  ],
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.cors"
                    },
                    {
                      "name": "envoy.filters.http.router"
                    }
                  ],
                  "http_protocol_options": {
                    "accept_http_10": false
                  },
                  "normalize_path": true,
                  "preserve_external_request_id": false,
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "name": "listener-8443-globalcorstest-*",
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.65f77b4cfda77405d7353cc1c83de745ee74b141"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.65f77b4cfda77405d7353cc1c83de745ee74b141"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.a2c3d327956b3acbfedb3662b5f50528dae653b5"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.a2c3d327956b3acbfedb3662b5f50528dae653b5"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.13426d65f10f16f25ed1da231fd9808e6920ba6b"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.13426d65f10f16f25ed1da231fd9808e6920ba6b"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/foo/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_globalcorstest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_globalcorstest_http_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.cfc9f77abfba141327b2282e7923308040d9ae76"
                                }
                              },
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/foo/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_globalcorstest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_globalcorstest_http_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.cfc9f77abfba141327b2282e7923308040d9ae76"
                                }
                              },
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/bar/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_globalcorstest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_globalcorstest_http_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://bar.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.32e90a5272992e914977925262f56c35deaee611"
                                }
                              },
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/bar/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_globalcorstest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_globalcorstest_http_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://bar.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.32e90a5272992e914977925262f56c35deaee611"
                                }
                              },
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "server_name": "envoy",
                  "stat_prefix": "ingress_https",
                  "use_remote_address": true
                }
              }
            ]
          }
        ],
        "listener_filters": [
          {
            "name": "envoy.filters.listener.tls_inspector"
          }
        ],
        "name": "listener-8443-globalcorstest",
        "traffic_direction": "UNSPECIFIED"
      }
    ]
  }
}
